// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should render 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-4 mt-1"
        >
          <div
            class="sc-AxirZ dUEVPd"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            />
          </div>
          <div
            class="sc-AxirZ dUEVPd"
          />
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        >
          <div
            class="inline-block mr-2 text text-theme-warning-400"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                star.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block mr-2 text text-theme-primary-300"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            />
          </div>
        </td>
        <td
          class="py-1 text-sm font-bold text-right"
        >
          <div />
        </td>
        <td
          class="py-1 text-sm font-bold text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render a button if variant is 'singleAction' 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-4 mt-1"
        >
          <div
            class="sc-AxirZ dUEVPd"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            />
          </div>
          <div
            class="sc-AxirZ dUEVPd"
          />
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        />
        <td
          class="py-1 text-sm font-bold text-right"
        >
          <div />
        </td>
        <td
          class="py-1 text-sm font-bold text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm gSuvFI"
              color="primary"
              data-testid="button"
              type="button"
            >
              Option 1
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
